# contracts/identity-api/openapi.yml
@@ -64,6 +64,23 @@ paths:
 
         '401':
           description: Invalid email or password
+  /api/v1/users/user:
+  get:
+    tags:
+      - Users
+    summary: Get authenticated user profile
+    operationId: getAuthenticatedUser
+    security:
+      - bearerAuth: []
+    responses:
+      '200':
+        description: Authenticated user profile
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserProfileResponse'
+      '401':
+        description: Authentication required or access token is invalid        
 components:
   schemas:
     LoginRequest:
@@ -132,3 +149,25 @@ components:
           type: string
           format: date-time
           example: '2026-08-13T20:00:00Z'
+    UserProfileResponse:
+      type: object
+      required:
+        - id
+        - email
+        - createdAt
+      properties:
+        id:
+          type: string
+          format: uuid
+        email:
+          type: string
+          format: email
+        createdAt:
+          type: string
+          format: date-time
+  securitySchemes:          
+    securitySchemes:
+        bearerAuth:
+          type: http
+          scheme: bearer
+          bearerFormat: JWT
