# services/identity-service/src/main/java/com/pacesonline/identityservice/profile/UserProfileController.java
@@ -1,0 +1,31 @@
+package com.pacesonline.identityservice.profile;
+
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
+
+@RestController
+@RequestMapping("/api/v1/users")
+public class UserProfileController {
+
+    private final UserProfileService userProfileService;
+
+    public UserProfileController(
+            UserProfileService userProfileService
+    ) {
+        this.userProfileService = userProfileService;
+    }
+
+    @GetMapping("/user")
+    public UserProfileResponse getUser(
+            @AuthenticationPrincipal Jwt jwt
+    ) {
+        UUID userId = UUID.fromString(jwt.getSubject());
+
+        return userProfileService.getUserProfile(userId);
+    }
+}
